2004-10-25 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * STYLE: ivars should start with a capital letter. 
  * Accessors should be const to avoid people starting modifying stuff (since this is a ref). 
  * remove 'virtual' as Style specify subclasses shouldn't reuse the keyword
  
2004-10-22 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Doc/Dicom2004_Part5.pdf added (thanks to JPR).
  * Dicts/dicomTS2004.dic, dicomV3VM2004.dic, groupNameAbbreviations2004.dic
    new 2004 dictionaries added (thanks to JPR).
  * FIX dashboard warning RLEFrame::NumberFragments is now of type unsigned int
  * CLEANUP_ROUND (15) for gdcmPixelConvert
    - RLEFrame::NumberFragments is now of type unsigned int
    - gdcmFile::GetImageData(), GetImageDataIntoVector(), GetImageDataRaw()
      are now all based on PixelConverter. ::GetImageDataIntoVectorRaw()
      no longer exists.

2004-10-21 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Initial work in gathering all transfer syntax accessors. clearly 
   IsDecompressed/IsJPEG2000/IsJPEGLossless/IsRLELossless shouldn't be all 
   ivars, but only one transfersyntax (class) ivar with equivalent method on 
   the class.
  
2004-10-21 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Removed all FILE* ref and replace by ifstream/ofstream. For now I use a temp 
    solution with the two files jdatadst.cxx and jdatasrc.cxx, this need to be 
    discussed (plus I didn't like having a 2000 lines patch not commited)

2004-10-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx: wrong type on return fixed (thanks dashboard)
  * CLEANUP_ROUND (14) for gdcmPixelConvert
    - PixelConvert::GetLutRGBA(FILE*) is now GetLutRGBA() (no fp needed)
    - PixelConvert::BuildRGBImage()(FILE*) is now BuildRGBImage() (no fp needed)
    - File::GetImageDataIntoVector() doesn't need unnecessary OpenFile() and
      CloseFile() anymore.